--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex: 1;
+  flex-direction: row;
+}
+
+.data-updater {
+  background-color: #161a1b;
+  z-index: 10;
+}
+
+.data-updater__header {
+  margin: 16px;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App {
+  /* background-color: #e8e8e8; */
+  background-color: teal;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__section {
+  display: flex;
+  flex-direction: column;
+}
+
+.app__section--left {
+  flex: 3;
+}
+
+.app__section--right {
+  flex: 1;
+}
+
+.app__section-group {
+  display: flex;
+  flex-direction: row;
 }
