add default colors

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+:root {
+  --main-bg-color: #f5f5f5;
+  --secondary-bg-color: #ffffff;
+  --dark-bg-color: #152b4c;
+  --accent-orange: #ff9a37;
+  --accent-orange-light: #fff2e5;
+  --accent-blue: #004ec7;
+  --accent-blue-light: #e0eaf8;
+  --accent-red: #ff563b;
+  --accent-red-light: #ffeae7;
+
+  --main-text: #192b44;
+  --secondary-text: #9192a3;
+  --dark-main-text: #ffffff;
+  --dark-secondary-text: #9192a3;
+}
+
 .content {
   display: flex;
   flex: 1;
@@ -5,7 +22,7 @@
 }
 
 .data-updater {
-  background-color: #161a1b;
+  background-color: var(--dark-bg-color);
   z-index: 10;
 }
 
@@ -16,8 +33,7 @@
 }
 
 .App {
-  /* background-color: #e8e8e8; */
-  background-color: teal;
+  background-color: var(--main-bg-color);
   display: flex;
   flex: 1;
   flex-direction: row;
