--- a/src/components/common/dashboardCard/index.css
+++ b/src/components/common/dashboardCard/index.css
@@ -2,7 +2,6 @@
   display: flex;
   padding: 8px;
   flex: 1;
-  /* background: teal; */
 }
 
 .dashboard-card__content {
@@ -10,7 +9,7 @@
   flex: 1;
   border-radius: 16px;
   padding: 0 16px;
-  background: #f5f5f5;
+  background: var(--secondary-bg-color);
   box-shadow: 20px 20px 60px #dddddd, -20px -20px 60px #ffffff;
-  border: 1px solid #e8e8e8;
+  border: 1px solid var(--main-bg-color);
 }
