--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,18 @@
   --dark-secondary-text: #9192a3;
 }
 
+button,
+input[type='submit'],
+input[type='reset'] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
 .content {
   display: flex;
   flex: 1;
@@ -37,6 +49,7 @@
   display: flex;
   flex: 1;
   flex-direction: row;
+  padding: 24px 8px;
 }
 
 .App-link {
