--- a/src/components/completedTasks/index.css
+++ b/src/components/completedTasks/index.css
@@ -4,3 +4,24 @@
   flex: 1;
   align-items: stretch;
 }
+
+.task {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  margin: 8px 0;
+}
+
+.task__icon {
+  height: 40px;
+  width: 40px;
+  border-radius: 8px;
+  background-color: teal;
+  margin-right: 16px;
+}
+
+.task__info {
+  flex: 1;
+}
