--- a/src/components/common/dashboardCard/index.css
+++ b/src/components/common/dashboardCard/index.css
@@ -1,8 +1,11 @@
 .dashboard-card {
   display: flex;
-  padding: 8px;
-  flex: 1;
+  padding: 12px;
   z-index: 1;
+}
+
+.dashboard-card__full-card {
+  flex: 1;
 }
 
 .dashboard-card__content {
