--- a/src/components/completedTasks/index.css
+++ b/src/components/completedTasks/index.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   flex: 1;
   align-items: stretch;
+  padding-bottom: 4px;
 }
 
 .task {
@@ -12,6 +13,7 @@
   align-items: center;
   height: 40px;
   margin: 8px 0;
+  padding: 4px 0 4px 16px;
 }
 
 .task__icon {
