--- a/src/components/welcomeBanner/index.css
+++ b/src/components/welcomeBanner/index.css
@@ -1,7 +1,7 @@
 .welcome-banner {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   padding-bottom: 16px;
 }
 
